--- a/config.yaml
+++ b/config.yaml
@@ -19,15 +19,19 @@ dataset: /media/iglohut/Elements/Internship/Autoscore_iglo/Data/old_data/data.h5
 model_params:
   # Name of main model to load/train/save
   name: autoscore_checkpoint
-  # Number of frames to use per nBatch x nframes x width x height x RGB input
+  # Number of frames to use per nBatch x nframes x width x height x RGB input: middle frame is used as target
   n_frames: 9
   # Batch size of training
   batch_size: 7
-  # Percentage of data set used for training (leftover for validation)
+  # Percentage of data set used for training (leftover is for validation)
   train_val_split: 0.9
   # Number of epochs
-  n_epochs: 10
+  n_epochs: 1
   # Number of iterations per epoch for training
-  n_iters_train: 1000
+  n_iters_train: 100
   # Number of iterations per epoch for testing
-  n_iters_val: 1000
+  n_iters_val: 1
+
+
+behaviours:
+  - Exploration
