--- a/config.yaml
+++ b/config.yaml
@@ -18,7 +18,7 @@ dataset: /media/iglohut/MD_Smits/Internship/autoscore_3d/data/data.h5
 
 model_params:
   # Name of main model to load/train/save
-  name: nepmodel
+  name: henk
   # Number of frames to use per nBatch x nframes x width x height x RGB input: middle frame is used as target
   n_frames: 9
   # frame apart interval: e.g. n_frames are taken,e ach n_steps apart
